# chameleon

./: .gitignore  docker-compose.local.yml  docker-compose.relay.yml  pyproject.toml
config/dovecot/conf.d/: 10-auth.conf  10-mail.conf  10-master.conf  auth-static.conf.ext
config/frp/: frpc.toml  frps.toml
config/nginx/: chameleon.conf
docs/: setup.md
services/local/: .env.example  Dockerfile  pyproject.toml
services/local/src/chameleon_local/: __main__.py  aliases.py  client.py  config.py  delivery.py  handler.py  server.py  web.py
services/local/src/chameleon_local/templates/: _alias_row.html  base.html  index.html
services/local/tests/: conftest.py  test_aliases.py  test_client.py  test_delivery.py  test_handler.py  test_web.py
services/relay/: .env.example  Dockerfile  pyproject.toml
services/relay/src/chameleon_relay/: __main__.py  api.py  config.py  handler.py  queue.py  server.py
services/relay/tests/: conftest.py  test_api.py  test_config.py  test_handler.py  test_queue.py
