[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chameleon-local"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.14"]

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
