[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chameleon-relay"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosmtpd>=1.4.6",
    "aiosmtplib>=3.0,<4.0",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.14"]

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon_relay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
